--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,12 +11,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports: 
-    dplyr,
-    tidyr,
-    future,
-    parallel,
-    future.apply,
-    progressr,
+    data.table,
     mblm
 Depends: 
     R (>= 3.5)
