--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,23 +2,4 @@
 
 export(Moments)
 export(SKRparam)
-importFrom(dplyr,"%>%")
-importFrom(dplyr,across)
-importFrom(dplyr,filter)
-importFrom(dplyr,left_join)
-importFrom(dplyr,mutate)
-importFrom(dplyr,select)
-importFrom(dplyr,slice)
-importFrom(future,plan)
-importFrom(future.apply,future_lapply)
-importFrom(mblm,mblm)
-importFrom(parallel,detectCores)
-importFrom(parallel,mclapply)
-importFrom(progressr,handlers)
-importFrom(progressr,progressor)
-importFrom(progressr,with_progress)
-importFrom(stats,lm)
-importFrom(stats,na.omit)
-importFrom(stats,residuals)
-importFrom(stats,var)
-importFrom(tidyr,unite)
+import(data.table)
